# govio

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  start.sh
data/: example_relationships.json
docs/: connect.json  design-thoughts.md  eval-skill.md  ontology.md  roadmap.md  self-service-data-analytics-with-govio.md  semantic-layer.md  test_case_fix_todo.md  数据探源作业方法.md
docs/metric/: Design.md
docs/plans/: 2026-03-13-relationship-json-reader-design.md  2026-03-13-relationship-json-reader.md  2026-03-18-mcp-data-exploration-design.md  2026-03-18-mcp-data-exploration-plan.md  2026-03-31-config-refactor-design.md  2026-03-31-config-refactor-plan.md  2026-03-31-unified-query-entry-design.md  2026-03-31-unified-query-entry.md  2026-04-02-metadata-onboard-implementation.md  2026-04-02-metadata-onboard-redesign.md  2026-04-02-onboard-wizard-design.md  2026-04-02-onboard-wizard-implementation.md  2026-04-17-onboard-datasource-improvement-design.md  2026-04-17-onboard-datasource-improvement.md
docs/specs/: README.md  cli.md  config.md  core.md  data-model.md  graph.md  metadata.md  observe-data.md
skills/govio/: SKILL.md  eval.md  reference.md  (+2 more)
skills/govio-mcp/: SKILL.md
skills/govio-observe/: SKILL.md
tests/: test_assets_generator.py  test_config.py  test_config_manager.py  test_duckdb_loader.py  test_explorer.py  test_graph_factory.py  test_mcp_config.py  test_mcp_database.py  test_meta_export.py  test_meta_export_ids.py  test_meta_export_integration.py  test_metadata_loader.py  test_metric_loader.py  test_node_id.py  test_onboard.py  test_relationship.py
(+88 files in other folders)
