[project]
name = "govio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "falkordb>=1.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "falkordb-bulk-loader>=1.0.7",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build]
exclude = [
  "/tests",
]

[project.scripts]
metadata-csv = "govio:make_metadata_csv"
