[project]
name = "govio"
version = "0.2.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datacompy>=0.10.0",
    "dotenv>=0.9.9",
    "duckdb>=0.10.0",
    "falkordb>=1.4.0",
    "falkordb-bulk-loader>=1.0.7",
    "jsonschema>=4.26.0",
    "mcp>=1.0.0",
    "networkx>=3.6.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pymysql>=1.1.2",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.45",
    "tqdm>=4.67.1",
    "trino>=0.337.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.hatch.build]
exclude = [
  "/tests",
]

[project.scripts]
govio-cli = "govio.cli:main"
